style.css
* {
    color: var(--white);
    font-family: Arial;
    padding: 10px;
    margin: 10px;
    background-color: rgb(40, 44, 44);
}

/* This is the universal rule selector*/

#header {
    display: flex;
    top: 0;
    height: 200px;
    width: 100%;
    background-color: teal;
    background-image: url(./media/Blue\ Polygonal.jpeg);
    background-position: right;
    background-repeat: no-repeat;
    background-size: cover;
    font-size: 16px;
    font-weight: 1px;
    justify-content: flex-end;
}

#nav ul {
    display: flex;
    background-color: teal;
    font-family: Tahoma;
    justify-content: center;
    align-items: center;
}

#backgroundImage {
    background-color: var(--white);
    background-position: center;
    background-size: auto;
    background-image: url("./media/DataViz1.gif")
}

.p {
    color: var(--white);
    font-family: Arial;
}

#absolute-box {

}

.section {
    color: var(--black);
}

h3, h4 {
    display: flex
    font-family: Helvetica;
    color: var(--white);
    justify-content: center;
    align-items: center;
}

#FeaturedProjects {
    margin: 0 5%;
    display: grid;
    grid-template-rows: 300px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas: 'Climate Math Physics';
    background-position: center;
}

.FeaturedProjectsArea {
    background-position: center;
    background-size: cover;
    cursor: pointer;
    display: grid;
    align-content: end;
}

#Climate {
    grid-area: 'Climate';
    background-image: url("./media/Daily\ Air\ Temp.gif");
    background-size: auto;
}

#Math {
    grid-area: 'Math';
    background-image: url('./media/DataViz1.gif')
}

#Physics {
    grid-area: 'Physics';
    background-image: url('./media/Quantum.gif');
    background-size: auto;
}

#Projects {
    margin: 0 5%;
    display: grid;
    grid-template-rows: 200px 200px 200px 200px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas: 'Calculator Calculator Calculator'
    'Image1 Textbox1 Textbox1'
    'Textbox2 Textbox2 Image2'
    'Calculator2 Calculator2 Calculator2';
    background-position: center;
}

#Calculator {
    grid-area: 'Calculator';
    background-image: url('./media/Calculator\ Vector.jpeg')
}

#Image1 {
    grid-area: 'Image1';
}

#Textbox1 {
    grid-area: 'Textbox1';
}

#Textbox2 {
    grid-area: 'Textbox2';
}

#Image2 {
    grid-area: 'Image2';
}

#Calculator2 {
    grid-area: 'Calculator2';
}

.ProjectsArea {
    background-position: center;
    background-size: cover;
    cursor: pointer;
    display: grid;

}

.heading {
    background-color: rgba(0,0,0,0.6);
    height: 20px;
    font-size: 16px;
    border-bottom: 20px teal;
    align-content: end;

}

/*This section below contains the footer for my page*/

footer {
    display: flex;
    justify-content: center;
    color: var(--white);
    padding: 2%;
    background-color: teal;
}

/*This 1st section contains the "variables" section for all variables featured
in this stylesheet, including color, etc */

:root {
    --black: #000;
    --white: #fff;
}

/* This last section includes the resizing options for my website, based on the 
adjusted width of the website, whether a window is adjust or whether seen on 
another device, such as mobile, tablet, etc. */
@media screen and (max-width: 600px) {
    .column {
        width: 100%;
    }
}

